--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,14 @@
 # working dir of scripts and main interpreter.
 pwd: .
 
-# path of user database, will be injected into scripts.
-user-db: ./data/random-users.py
+# runtime config
+config:
+  # path of user database, will be injected into scripts.
+  user-db: ./data/random-users.py
+  # wait forever instead of wait a fixed time.
+  wait-forever: true
+  # kill runpy script after timeout (ms)
+  timeout: 3000
 
 # scripts dirs
 scripts: 
