--- a/src/data/default_config.yaml
+++ b/src/data/default_config.yaml
@@ -7,7 +7,7 @@ runtime:
   user-db: ./data/random-users.py
 
 job:
-  path: ./Example.job
+  path: ./jobs/example.job
   # halts program on job scripts syntax errors.
   halt-onerror: false
 
